[gd_scene load_steps=4 format=3 uid="uid://d341ifkbads0l"]

[ext_resource type="Texture2D" uid="uid://eyt82ommxp7x" path="res://assets/background/Background.jpg" id="1_0a1g1"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_dhwtd"]
[ext_resource type="FontFile" uid="uid://pattneh8lhsf" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_wikr2"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dhwtd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -230.0
offset_right = 1919.0
offset_bottom = 203.0
grow_vertical = 2
texture = ExtResource("1_0a1g1")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 32
theme_override_fonts/font = ExtResource("2_wikr2")
theme_override_font_sizes/font_size = 48
text = "Knightly Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wikr2")
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="Levels_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wikr2")
theme_override_font_sizes/font_size = 32
text = "Select Level"

[node name="Options_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wikr2")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wikr2")
theme_override_font_sizes/font_size = 32
text = "Exit"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options_button" to="." method="_on_start_button_pressed"]
